# create-tauri-ui

./: .gitignore  .gitmodules  README.md  package.json  pnpm-lock.yaml
src/: index.ts
templates/sveltekit/: package.json
templates/sveltekit/src-tauri/: Cargo.toml  tauri.conf.json
templates/vite/: package.json  pnpm-lock.yaml
templates/vite/src/: aa
templates/vite/src-tauri/: Cargo.toml  tauri.conf.json
templates/vite/src/components/: menu.tsx
